--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -40,7 +40,12 @@
   position: relative;
   display: inline-block;
   top: -0.05em;
-  color: var(--bg);
+  color: var(--bgrory);
+  font-family: "Atelier";
+}
+
+.menu-logo h4 {
+  font-family: "Atelier";
 }
 
 .menu-actions {
@@ -69,7 +74,7 @@
   background: rgba(0, 0, 0, 0.25);
   background: transparent;
   transition: all 300ms;
-  border: 1px dashed rgba(255, 255, 255, 0.25);
+  border: 1px dashed var(--fgrory) rgba(255, 255, 255, 0.25);
 }
 
 .hamburger-icon:hover {
