--- a/src/fonts.css
+++ b/src/fonts.css
@@ -229,3 +229,22 @@
   font-style: normal;
   font-display: swap;
 }
+
+
+@font-face {
+  font-family: "Atelier";
+  src: url("/fonts/atelier/atelier-webfont.woff")
+  format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Atelier";
+  src: url("/fonts/atelier/atelier-webfont.woff2")
+  format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
