--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -11,6 +11,7 @@
   left: -0.75vw;
   font-size: 24vw;
   line-height: 0.75;
+  color: var(--fgrory);
 }
 
 .about-hero {
@@ -22,7 +23,7 @@
   margin: 2em;
   border-radius: 1em;
   overflow: hidden;
-  border: 1px dashed var(--fg);
+  border: 1px dashed var(--fgrory);
 }
 
 .about-hero-img {
@@ -43,10 +44,12 @@
   width: 60%;
   margin: 0 auto;
   text-align: center;
+  color: var(--fgrory);
 }
 
 .about-me-copy-wrapper h3 {
   margin: 1em;
+  text-transform: none;
 }
 
 .about-me-copy-wrapper h3 {
@@ -60,14 +63,14 @@
   padding: 2em;
   display: flex;
   gap: 2em;
-  border: 1px dashed var(--fg);
+  border: 1px dashed var(--fgrory);
   border-radius: 1em;
 }
 
 .services-col:nth-child(1) {
   position: relative;
   flex: 2;
-  border: 1px dashed var(--fg);
+  border: 1px dashed var(--fgrory);
   border-radius: 1em;
   display: flex;
   justify-content: center;
@@ -87,7 +90,7 @@
 
 .services-col:nth-child(1) p {
   position: relative;
-  color: var(--bg);
+  color: var(--fg);
   z-index: 1;
 }
 
@@ -97,7 +100,16 @@
 
 .services-col h4 {
   margin-bottom: 2em;
+  color: var(--fgrory);
 }
+.services-col p{
+  color: var(--fgrory);
+}
+
+.service-list-col h5 {
+  color: var(--fgrory);
+}
+
 
 .services-list {
   display: flex;
@@ -121,7 +133,7 @@
 
 .service-list-row {
   padding: 2em 0;
-  border-top: 1px dashed var(--fg);
+  border-top: 1px dashed var(--fgrory);
 }
 
 .about-banner-img {
@@ -140,7 +152,7 @@
 .fav-tools {
   margin: 2em;
   padding: 6em 2em 2em 2em;
-  border: 1px dashed var(--fg);
+  border: 1px dashed var(--fgrory);
   border-radius: 1em;
 }
 
@@ -181,7 +193,7 @@
   flex-direction: column;
   justify-content: flex-end;
   gap: 0.5em;
-  border: 1px dashed var(--fg);
+  border: 1px dashed var(--fgrory);
   border-radius: 1em;
   overflow: hidden;
 }
