--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -17,11 +17,11 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background: rgba(0, 0, 0, 0.25);
+  
   backdrop-filter: blur(20px);
-  border-radius: 1rem;
+  
   overflow: hidden;
-  border: 1px dashed rgba(255, 255, 255, 0.25);
+  border-bottom: 1px dashed var(--bgrory);
   pointer-events: all;
   z-index: 100000;
 }
@@ -42,6 +42,7 @@
   top: -0.05em;
   color: var(--bgrory);
   font-family: "Atelier";
+  
 }
 
 .menu-logo h4 {
@@ -71,7 +72,7 @@
   height: 40px;
   width: 60px;
   border-radius: 0.6rem;
-  background: rgba(0, 0, 0, 0.25);
+  background: var(--bgrory);
   background: transparent;
   transition: all 300ms;
   border: 1px dashed var(--fgrory) rgba(255, 255, 255, 0.25);
