--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ p {
 p.primary, span.primary, a.primary {
   text-transform: uppercase;
   font-family: "Messina Sans Mono";
+  text-decoration: none;
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: 0.04em;
@@ -94,7 +95,7 @@ p.primary, span.primary, a.primary {
 
 a.primary {
   color: var(--bgrory);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 p.secondary {
