--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -86,7 +86,16 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
+
 }
+
+.services-banner img {
+  filter: grayscale(100%);
+  
+  
+}
+
+
 
 .services-col:nth-child(1) p {
   position: relative;
@@ -142,6 +151,7 @@
   border-radius: 1em;
   overflow: hidden;
   border: 1px dashed var(--fg);
+  
 }
 
 .about-banner-img-wrapper {
