--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -65,6 +65,7 @@
   gap: 2em;
   border: 1px dashed var(--fgrory);
   border-radius: 1em;
+  min-height: 80svh;
 }
 
 .services-col:nth-child(1) {
@@ -75,7 +76,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  text-align: left;
   overflow: hidden;
 }
 
@@ -86,6 +87,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
+  
 
 }
 
@@ -101,6 +103,7 @@
   position: relative;
   color: var(--fg);
   z-index: 1;
+
 }
 
 .services-col:nth-child(2) {
@@ -108,15 +111,18 @@
 }
 
 .services-col h4 {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   color: var(--fgrory);
+  text-align: left;
 }
 .services-col p{
   color: var(--fgrory);
+  text-align: left;
 }
 
 .service-list-col h5 {
   color: var(--fgrory);
+  text-align: left;
 }
 
 
