--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -65,7 +65,8 @@
   gap: 2em;
   border: 1px dashed var(--fgrory);
   border-radius: 1em;
-  min-height: 80svh;
+  min-height: 70svh;
+  max-width: 80%;
 }
 
 .services-col:nth-child(1) {
@@ -278,7 +279,7 @@
   }
 
   .services-col:nth-child(1) {
-    aspect-ratio: 5/3;
+    aspect-ratio: 9/16;
   }
 
   .service-list-row {
