--- a/src/components/BackgroundVideo/BackgroundVideo.css
+++ b/src/components/BackgroundVideo/BackgroundVideo.css
@@ -1,7 +1,7 @@
 .bg-video video {
     object-fit: cover;
     width: 100vw;
-    height: 100svh;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
