--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -100,7 +100,6 @@ html {
   height: 40px;
   width: 60px;
   border-radius: 0.6rem;
-  background: var(--bgrory);
   background: transparent;
   transition: all 300ms;
   border: 1px dashed var(--bgrory) rgba(255, 255, 255, 0.25);
@@ -116,7 +115,7 @@ html {
   position: absolute;
   width: 24px;
   height: 1.5px;
-  background: #fff;
+  background: var(--bgrory);
   transition: all 300ms ease-in-out;
   transition-delay: 150ms;
   will-change: transform;
@@ -177,7 +176,7 @@ html {
 
 .menu-link-item .menu-link-item-holder a {
   position: relative;
-  color: var(--bg);
+  color: var(--bgrory);
   font-family: "Rader";
   font-size: 7vw;
   text-transform: uppercase;
