--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -374,6 +374,10 @@
     left: 42% !important;
   }
 
+  .scrollIndicator {
+    display: none;
+  }
+
   .mobileScrollIndicator svg {
     width: 40px;
     height: 20px;
