--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -48,17 +48,17 @@
 
 .hero-header-2 {
   position: absolute;
-  top: 30%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
   
   text-wrap: balance;
 }
 
-.hero-header-2 h4 {
+.hero-header-2 h5 {
   color: var(--bgrory);
   text-align: center;
-  font-size: 3vw;
+  font-size: 2.5vw;
   line-height: 1;
 }
 
@@ -142,10 +142,14 @@
 
 .home-work-2 {
   max-width: 100%;
-  margin: 4rem 2rem;
-  padding: 8em 2em;
+  margin: 2rem 2rem;
+  padding: 8em 0em;
   background-color: var(--bgrory);
   border-radius: 1em;
+}
+
+.home-work-2 .home-work-list {
+  width: 80%;
 }
 
 .home-work-list {
@@ -216,7 +220,14 @@
   }
 
   
- 
+  .home-work-2 .home-work-list {
+    width: 80%;
+  
+  }
+
+  .home-work-2 {
+    margin: 2rem auto;
+  }
 
   .home-work {
     margin: 0 auto;
@@ -232,8 +243,6 @@
   }
 
 
-
-  
 
   .hero,
   .sticky-titles,
@@ -400,7 +409,7 @@
   gap: 2em;
   border: 1px dashed var(--fgrory);
   border-radius: 1em;
-  min-height: 70svh;
+  min-height: 50svh;
   max-width: 80%;
 }
 
@@ -478,7 +487,7 @@
   .scrollIndicator {
     display: none;
   }
-
+ 
   .services {
     flex-direction: column;
     max-width: 100%;
