--- a/src/components/BackgroundVideo/BackgroundVideo.css
+++ b/src/components/BackgroundVideo/BackgroundVideo.css
@@ -1,6 +1,6 @@
 .bg-video video {
     object-fit: cover;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
