--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -510,6 +510,9 @@ width: 80%;
     gap: 1em;
   }
 
+  .services-list p {
+      text-align: left !important;
+  }
   .mobileScrollIndicator svg {
     width: 40px;
     height: 20px;
