centralised about us text on mbile

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -511,7 +511,7 @@ width: 80%;
   }
 
   .services-list p {
-      text-align: left !important;
+      text-align: center !important;
   }
   .mobileScrollIndicator svg {
     width: 40px;
