--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -279,6 +279,17 @@ width: 80%;
     gap: 1.25em;
   }
 
+  .services {
+    flex-direction: column;
+  }
+
+  .services-col:nth-child(1) {
+    flex: 1;
+    min-height: 50svh;
+  }
+
+  
+
   .hobby {
     aspect-ratio: 5/3;
   }
