fixed sticky tiles height

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -65,7 +65,7 @@
 .sticky-titles {
   position: relative;
   width: 100vw;
-  height: 100svh;
+  height: 100dvh;
   overflow: hidden;
   padding: 2em;
   display: flex;
