--- a/src/components/BackgroundVideo/BackgroundVideo.css
+++ b/src/components/BackgroundVideo/BackgroundVideo.css
@@ -7,3 +7,11 @@
     left: 0;
     z-index: -1;
 }
+
+.bg-video video::-webkit-media-controls {
+    display: none !important;
+}
+
+.bg-video video::-webkit-media-controls-start-playback-button {
+    display: none !important;
+}
